--- a/.github/workflows/build-apk-localdesktop.yml
+++ b/.github/workflows/build-apk-localdesktop.yml
@@ -1,29 +1,28 @@
 name: build-apk-localdesktop
-
+ 
 on:
   workflow_dispatch:
-
+ 
 permissions:
   contents: write
-
+ 
 env:
   CARGO_TERM_COLOR: always
   ANDROID_KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
   ANDROID_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
   ANDROID_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+ 
     steps:
       - name: Clean runner environment
         run: |
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
           rm -rf ~/.gradle/wrapper/dists/*
-        shell: bash
-
+ 
       - name: Checkout source repo
         uses: actions/checkout@main
         with:
@@ -31,82 +30,90 @@ jobs:
           ref: main
           path: localdesktop_source
           fetch-depth: 0
-
+ 
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
         with:
           path: ci_source
-
+ 
       - name: Initialize build environment
         id: init
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-
+ 
       - name: Setup Gradle 8.14.3
         uses: gradle/actions/setup-gradle@main
         with:
           gradle-version: "8.14.3"
-
+ 
       - name: Extract version
         id: extract_version
         run: echo "version=$(cargo metadata --format-version=1 --no-deps | jq -r '.packages[0].version')" >> "$GITHUB_OUTPUT"
-
+ 
       - name: Setup signing keystore
         run: |
           mkdir -p target/x/release/android/gradle/app
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > target/x/release/android/gradle/app/release-key.jks
           # Verify keystore
           keytool -list -v -keystore target/x/release/android/gradle/app/release-key.jks -storepass $ANDROID_KEYSTORE_PASSWORD
-
+ 
       - name: Update manifest.yaml to target api 35
         run: |
           sed -i 's/target_sdk_version: 33/target_sdk_version: 36/' "${{ github.workspace }}/localdesktop_source/manifest.yaml"
-
+ 
       - name: Install llvm
         run: sudo apt-get update && sudo apt-get install -y llvm
-
+ 
       - name: Download android ndk r28 # Xbuild does this automatically, but at the moment it does not yet support NDK r28, and we need it for 16 KB ELF alignment.
         run: |
           curl -o android-ndk-r28-linux.zip https://dl.google.com/android/repository/android-ndk-r28-linux.zip
           unzip android-ndk-r28-linux.zip
           rm android-ndk-r28-linux.zip
-
+ 
       - name: Prepare android.ndk # Replicate these steps from Xbuild's release workflow, so a fully compatible Android.ndk folder with NDK r28 is available offline in the working directory where Xbuild proceeds.
         run: |
           TOOLCHAIN=android-ndk-r28/toolchains/llvm/prebuilt/linux-x86_64
           CLANG_VERSION=$(ls $TOOLCHAIN/lib/clang | head -n 1)
           CLANG=$TOOLCHAIN/lib/clang/$CLANG_VERSION
-
+ 
           mkdir Android.ndk
           cp -r $TOOLCHAIN/sysroot/usr Android.ndk/
           cp -r $CLANG/lib/linux/aarch64/* Android.ndk/usr/lib/aarch64-linux-android/
           cp -r $CLANG/lib/linux/arm/* Android.ndk/usr/lib/arm-linux-androideabi/
           cp -r $CLANG/lib/linux/x86_64/* Android.ndk/usr/lib/x86_64-linux-android/
           cp -r $CLANG/lib/linux/i386/* Android.ndk/usr/lib/i686-linux-android/
-
+ 
           echo "INPUT(-lunwind)" > Android.ndk/usr/lib/aarch64-linux-android/libgcc.a
           echo "INPUT(-lunwind)" > Android.ndk/usr/lib/arm-linux-androideabi/libgcc.a
           echo "INPUT(-lunwind)" > Android.ndk/usr/lib/x86_64-linux-android/libgcc.a
           echo "INPUT(-lunwind)" > Android.ndk/usr/lib/i686-linux-android/libgcc.a
-
+ 
           mkdir -p ~/.cache/x/
           mv Android.ndk ~/.cache/x/
-
+ 
+      # - name: Build xbuild
+      #   working-directory: patches/xbuild
+      #   run: cargo install --path xbuild
+ 
       - name: Build xbuild
-        working-directory: patches/xbuild
-        run: cargo install --path xbuild
-
+        working-directory: ${{ github.workspace }}/ci_source/patches/xbuild
+        run: |
+          # 确保在正确的目录
+          pwd
+          ls -la
+          cargo install --path .
+ 
       - name: Build apk
         run: x build --release --platform=android --arch=arm64 --format=apk
-
+ 
       - name: Rename apk
         run: |
           mkdir -p ${{ github.workspace }}/dist
           mv target/x/release/android/gradle/app/build/outputs/apk/release/app-release.apk "${{ github.workspace }}/dist/localdesktop-${{ env.BUILD_DATE }}.apk"
-
+ 
       # - name: Build AAB
       #   run: x build --release --platform=android --arch=arm64 --format=aab
-
+ 
       # - name: Rename AAB
       #   run: |
       #     mv target/x/release/android/gradle/app/build/outputs/bundle/debug/app-debug.aab target/x/localdesktop-${{ steps.extract_version.outputs.version }}-debug.aab
