--- a/.github/workflows/build-apk-localdesktop.yml
+++ b/.github/workflows/build-apk-localdesktop.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Setup signing keystore
         run: |
           mkdir -p target/x/release/android/gradle/app
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > target/x/release/android/gradle/app/release-key.jks
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > target/x/release/android/gradle/app/release-key.p12
           # Verify keystore
           keytool -list -v -keystore target/x/release/android/gradle/app/release-key.jks -storepass $ANDROID_KEYSTORE_PASSWORD
  
@@ -172,7 +172,7 @@ jobs:
           mkdir -p "${{ github.workspace }}/dist"
           # 使用apksigner对APK签名
           apksigner sign \
-            --ks "./target/x/release/android/gradle/app/release-key.jks" \
+            --ks "${{ github.workspace }}/target/x/release/android/gradle/app/release-key.p12" \
             --ks-pass "pass:${{ env.KEYSTORE_PASSWORD }}" \
             --ks-key-alias "${{ env.KEY_ALIAS }}" \
             --ks-type PKCS12 \
@@ -204,7 +204,7 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          P12_KEYSTORE_PATH: "./target/x/release/android/gradle/app/release-key.jks"
+          P12_KEYSTORE_PATH: "./target/x/release/android/gradle/app/release-key.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "${{ github.workspace }}/dist/localdesktop-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-localdesktop"
