--- a/.github/workflows/build-apk-localdesktop.yml
+++ b/.github/workflows/build-apk-localdesktop.yml
@@ -175,7 +175,8 @@ jobs:
           find . -path "*/build/outputs/bundle/*" -name "*.aab" 2>/dev/null | head -10
  
       - name: Sign the apk (pkcs12)
-        working-directory: ./localdesktop_source
+        # working-directory: ./localdesktop_source
+        working-directory: ${{ github.workspace }}/localdesktop_source
         run: |
           # 设置Android build-tools路径
           export ANDROID_HOME=/usr/local/lib/android/sdk
